src/App.css
*, *:before, *:after {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

/* body & root*/
  body {
    height: 100vh;
    width: 100%;
    background-color: rgb(250, 250, 250)
  }

  #root {
    height: 100%;
    /* max-height: 100vh; */
  }

/* App */
  .app-container {
    width: 100%;
    height: 100%;
    margin: 5vh auto 0 auto;
    padding-bottom: 48px;

    display: flex;
    flex-direction: column;
    align-items: center;
  }

  .app-container > * {
    background-color: white;
  }


/* Header */
  .header {
    min-width: 60%;
    min-height: 4rem;
    border: 1px solid rgba(0, 0, 0, 0.08);
    border-radius: 10px;
    
    box-shadow:
      0 2.8px 2.2px rgba(0, 0, 0, 0.04),
      0 6.7px 5.3px rgba(0, 0, 0, 0.08),
      0 12.5px 10px rgba(0, 0, 0, 0.12)
      /* 0 22.3px 17.9px rgba(0, 0, 0, 0.072) */
      /* 0 41.8px 33.4px rgba(0, 0, 0, 0.086), */
      /* 0 100px 80px rgba(0, 0, 0, 0.12) */
    ;

    display: flex;
    align-items: center;
    justify-content: space-around;
  }

  .header__date--title {
    margin-left: 1rem;
  }

  .header__date--inputContainer {
    display: flex;
    /* justify-content: space-around; */
  }

  .header__date--inputContainer > * {
    margin-left: .2rem;
  }

  .header__date--pickerStart {
    margin-left: 1rem;
  }

/* MainBody */
  .main-body {
    height: 500px;
    width: 95%;
    position: relative;
    margin: 1rem;
    padding-bottom: .5rem;

    border: 1px solid rgba(0, 0, 0, 0.08);
    border-radius: 10px;
    box-shadow:
      0 2.8px 2.2px rgba(0, 0, 0, 0.04),
      0 6.7px 5.3px rgba(0, 0, 0, 0.08),
      0 12.5px 10px rgba(0, 0, 0, 0.12)
    ;

    flex-grow: 1;
    
  }

  .main-body__spinner {
    width: 100%;
    height: 100%;
    display: flex;
    justify-content: center;
    align-items: center;
  }

/* Graph */

